delete net